--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
 </head>
 
 <body onload="CFInstall.check();">
-<section id="loginScreen" class="screen">
-  
+<section id="loginScreen" style="text-align:center;" class="screen">
+
+</section>
+<section id="desktop" class="desktop" style="display:none;" class="screen">
+  <nav style="display:block;" class="nav" id="mainNavApp"><img src="mainBtn2.png" width="40" height="40" alt="+" title="App Menu" /></nav>
 </section>
 
 
