--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
 </head>
 
 <body onload="CFInstall.check();">
-<section id="loginScreen" style="text-align:center;" class="screen">
+<section id="loginScreen" style="background: rgba(255,0,0,1);
+background: -moz-linear-gradient(left, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 50%, rgba(255,0,0,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,0,0,1)), color-stop(0%, rgba(255,238,238,1)), color-stop(0%, rgba(255,0,0,1)), color-stop(50%, rgba(255,238,238,1)), color-stop(100%, rgba(255,0,0,1)));
+background: -webkit-linear-gradient(left, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 50%, rgba(255,0,0,1) 100%);
+background: -o-linear-gradient(left, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 50%, rgba(255,0,0,1) 100%);
+background: -ms-linear-gradient(left, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 50%, rgba(255,0,0,1) 100%);
+background: linear-gradient(to right, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 50%, rgba(255,0,0,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#ff0000', GradientType=1 );text-align:center;" class="screen">
 
 </section>
 <section id="desktop" class="desktop" style="display:none;" class="screen">
