--- a/index.html
+++ b/index.html
@@ -39,6 +39,51 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"> </script>
 
 <style> /* CSS rules to use for styling the overlay: .chromeFrameOverlayContent .chromeFrameOverlayContent iframe .chromeFrameOverlayCloseBar .chromeFrameOverlayUnderlay */ </style>
+<style type="text/css"> 
+form.form input.text, form.form textarea.standard, form.form select, form.form input.date { 
+   background-color:#000000;
+   border:solid 1px #FFFFFF;
+   font-size:16px;
+   color:#FFFFFF;
+   -moz-border-radius:20px;
+   -webkit-border-radius:20px;
+   border-radius:20px;
+   padding-top:1px;
+   padding-bottom:1px;
+   padding-left:5px;
+   padding-right:5px;
+}
+form.form p label {
+   font-size:14px;
+   color:#333333;
+   font-weight:normal;
+   padding-top:0px;
+   padding-bottom:0px;
+}
+form.form p.submit input {
+   background-color:#000000;
+   border:solid 1px #FFFFFF;
+   font-size:16px;
+   color:#FFFFFF;
+   font-weight:bold;
+   padding-top:1px;
+   padding-bottom:1px;
+   padding-right:50px;
+   padding-left:50px;
+   -moz-border-radius:20px;
+   -webkit-border-radius:20px;
+   border-radius:20px;
+}
+form.form p.submit {
+   margin-top:0px;
+   margin-bottom:0px;
+   text-align:center;
+}
+form.form p.required label, form.form span.required label {
+    font-weight:bold;
+}
+
+ </style>
 
 <link rel="stylesheet" href="os.css"/>
 
