--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <style> /* CSS rules to use for styling the overlay: .chromeFrameOverlayContent .chromeFrameOverlayContent iframe .chromeFrameOverlayCloseBar .chromeFrameOverlayUnderlay */ </style>
 <style type="text/css"> 
-form.form input.text, form.form textarea.standard, form.form select, form.form input.date { 
+ input[type="text"],  textarea, select,  input[type="date"] { 
    background-color:#000000;
    border:solid 1px #FFFFFF;
    font-size:16px;
@@ -53,14 +53,14 @@ form.form input.text, form.form textarea.standard, form.form select, form.form i
    padding-left:5px;
    padding-right:5px;
 }
-form.form p label {
+  label {
    font-size:14px;
    color:#333333;
    font-weight:normal;
    padding-top:0px;
    padding-bottom:0px;
 }
-form.form p.submit input {
+input[type="submit"],button {
    background-color:#000000;
    border:solid 1px #FFFFFF;
    font-size:16px;
@@ -74,15 +74,13 @@ form.form p.submit input {
    -webkit-border-radius:20px;
    border-radius:20px;
 }
+   /*
 form.form p.submit {
    margin-top:0px;
    margin-bottom:0px;
    text-align:center;
-}
-form.form p.required label, form.form span.required label {
-    font-weight:bold;
-}
-
+}*/
+ 
  </style>
 
 <link rel="stylesheet" href="os.css"/>
@@ -91,7 +89,7 @@ form.form p.required label, form.form span.required label {
 
 </head>
 
-<body onload="CFInstall.check();">
+<body onload="CFInstall.check();checkMemStatus();">
 <section id="loginScreen" style="background: rgba(255,0,0,1);
 background: -moz-linear-gradient(left, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 50%, rgba(255,0,0,1) 100%);
 background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,0,0,1)), color-stop(0%, rgba(255,238,238,1)), color-stop(0%, rgba(255,0,0,1)), color-stop(50%, rgba(255,238,238,1)), color-stop(100%, rgba(255,0,0,1)));
@@ -107,6 +105,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', end
    <p>
 <button onclick="var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.',200,200,false);}">Login</button>
    </p></form></section>
+   <section class="screen" id="mainSetup" style="display:none;">
+      <h1>RadixOS Setup</h1>
+      <input type="text" id="name1" placeholder="Username" /><br/>
+      <input type="text" id="pword1" placeholder="Password" /><br/>
+      <label for="autoFSbox">Auto FUlllscreen on page load</label><input type="checkbox" id="autoFSbox" /><br/>
+      <button onclick="setupUser(getE('#name1').value,getE('#pword1').value,getE('#autoFSSbox').checked);getE('#name1').value='';getE('#pword1').value='';showScreen('loginScreen');">Setup</button>
+   </section>
 <section id="desktop" class="desktop" style="display:none;" class="screen">
   <nav style="display:block;" class="nav" id="mainNavApp"><img src="mainBtn2.png" width="40" height="40" alt="+" title="App Menu" /></nav>
 </section>
