--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', end
       <input type="text" id="name1" placeholder="Username" /><br/>
       <input type="text" id="pword1" placeholder="Password" /><br/>
       <label for="autoFSbox">Auto FUlllscreen on page load</label><input type="checkbox" id="autoFSbox" /><br/>
-      <button onclick="try{setupUser(getE('#name1').value,getE('#pword1').value,getE('#autoFSSbox').checked);getE('#name1').value='';getE('#pword1').value='';showScreen('loginScreen');}catch(err){alert(err);}">Setup</button>
+      <button onclick="try{setupUser(getE('#name1').value,getE('#pword1').value,getE('#autoFSbox').checked);getE('#name1').value='';getE('#pword1').value='';showScreen('loginScreen');}catch(err){alert(err);}">Setup</button>
    </section>
 <section id="desktop" class="desktop" style="display:none;" class="screen">
   <nav style="display:block;" class="nav" id="mainNavApp"><img src="mainBtn2.png" width="40" height="40" alt="+" title="App Menu" /></nav>
