--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', end
 <form class="form" onsubmit="return false;">
    <p><input type="text" id="uname" placeholder="Username" /></p>
 
-<p><input type="password" id="pword" placeholder="Password" onkeypress="if(event.keyCode==13){var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.',200,200,false);}}" /></p>
+<p><input type="password" id="pword" placeholder="Password" onkeypress="try{if(event.keyCode==13){var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.',200,200,false);}}}catch(err){alert(err);}" /></p>
    <p>
-<button onclick="var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.',200,200,false);}">Login</button>
+<button onclick="try{var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.',200,200,false);}}catch(err){alert(err);}">Login</button>
    </p></form></section>
    <section class="screen" id="mainSetup" style="display:none;">
       <h1>RadixOS Setup</h1>
