--- a/index.html
+++ b/index.html
@@ -96,14 +96,13 @@ background: -o-linear-gradient(left, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%,
 background: -ms-linear-gradient(left, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 50%, rgba(255,0,0,1) 100%);
 background: linear-gradient(to right, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 0%, rgba(255,0,0,1) 0%, rgba(255,238,238,1) 50%, rgba(255,0,0,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#ff0000', GradientType=1 );text-align:center;" class="screen">
-<form class="form" onsubmit="return false;">
-   <p><input type="text" id="uname" placeholder="Username" /></p>
-
-<p><input type="password" id="pword" placeholder="Password" onkeypress="try{if(event.keyCode==13){var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.',200,200,false);}}}catch(err){alert(err);}" /></p>
-   <p>
-<button onclick="try{var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.',200,200,false);}}catch(err){alert(err);}">Login</button>
-   </p></form></section>
-   <section class="screen" id="mainSetup" style="display:none;">
+ <h1 id="mainClock1">RadixOS</h1>
+ <br/>
+<input type="text" id="uname" placeholder="Username" />
+<br/>
+<input type="password" id="pword" placeholder="Password" onkeypress="try{if(event.keyCode==13){var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.'),200,200,false);}}}catch(err){alert(err);}" /></p>
+<br/><button onclick="try{var uname=document.querySelector('uname');var pword=document.querySelector('pword');if(login(uname.value,pword.value)){runLogon(uname);}else{pword.value='';appOpen(document.querySelector('#loginSCreen'),'Login Failed',elt('span',null,'Incorrect username/password combination.'),200,200,false);}}catch(err){alert(err);}">Login</button>
+     <section class="screen" id="mainSetup" style="display:none;">
       <h1>RadixOS Setup</h1>
       <input type="text" id="name1" placeholder="Username" /><br/>
       <input type="text" id="pword1" placeholder="Password" /><br/>
