--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 <link rel="apple-touch-icon" href="icon.png" />
 
-<link rel="apple-touch-startup-image" href="bigimage.png" />
+<link rel="apple-touch-startup-image" href="icon.png" />
 
 <link rel="touch-icon" href="icon.png" />
 
-<link rel="touch-startup-image" href="bigimage.png" />
+<link rel="touch-startup-image" href="icon.png" />
 
 <link rel="shortcut icon" href="icon.png" />
 
