--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', end
       <label for="autoFSbox">Auto FUlllscreen on page load</label><input type="checkbox" id="autoFSbox" /><br/>
       <button onclick="try{setupUser(getE('#name1').value,getE('#pword1').value,getE('#autoFSbox').checked);getE('#name1').value='';getE('#pword1').value='';showScreen('loginScreen');}catch(err){alert(err);}">Setup</button>
    </section>
-<section id="desktop" class="desktop" style="display:none;" class="screen">
+<section id="desktop" class="desktop screen" style="display:none;">
   <nav style="display:block;" class="nav" id="mainNavApp"><img src="mainBtn2.png" width="40" height="40" alt="+" title="App Menu" /></nav>
 </section>
 
